Fix for PLU-6: Allow user to compare epub3's pages with original PDF's pages (Note: the tool bar still need to be styled: PLU-158)

--- a/locale/en/messages.json
+++ b/locale/en/messages.json
@@ -55,6 +55,30 @@
         "locations": [
             "welcome/ui/main.reel/main.html"
         ]
+    },
+
+    "dual-view-btn-label": {
+        "message": "Dual Pages",
+        "description": "view page as spread",
+        "locations": [
+            "ui/main.reel/main.html"
+        ]
+    },
+
+    "single-view-btn-label": {
+        "message": "Single Page",
+        "description": "view single page",
+        "locations": [
+            "ui/main.reel/main.html"
+        ]
+    },
+
+    "auto-opacity-tooltip": {
+        "message": "Auto opacity",
+        "description": "tooltip for the auto overlay opacity checkbox",
+        "locations": [
+            "ui/main.reel/main.html"
+        ]
     }
 
 }
